--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="contain">
         <h1 class="heading">Inayat Singh Beri</h1>
         <h4 class="sub-heading">An 18 year old with great passion for art.<br> I enjoy working in different mediums and
-            pushing myself to go out of my comfort zone.</h4>
+            pushing myself to go out of my comfort zone</h4>
         <i class="fab fa-dribbble" id="dribbble"></i>
         <i class="fab fa-behance-square" id="behance"></i>
         <i class="fab fa-pinterest " id="pinterest"></i>
